# CppGameAnimationProgWork

./: CMakeLists.txt  CppGameAnimationProgWork.cpp  CppGameAnimationProgWork.h  Main.cpp
cmake/: FindGLFW3.cmake
include/glad/: glad.h
model/: Model.cpp  Model.h
opengl/: Framebuffer.cpp  Framebuffer.h  OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  UserInterface.cpp  UserInterface.h  VertexBuffer.cpp  VertexBuffer.h
shader/: basic.vert  changed.vert
src/: glad.c
tools/: Camera.cpp  Camera.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h
window/: Window.cpp  Window.h
